# argus

./: .env.example  .gitignore  ARGUS-FEATURES.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FAN_OUT_PLAN.md  LICENSE  OPEN_SOURCE_READINESS.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: publish.yml
argus/: behaviors.py  cli.py  report_html.py
argus/tools/: files.py  scanners.py
argus/workflows/: iso25010-scan.yaml  repo-scan.yaml
tests/: conftest.py  test_ci_scanner.py  test_e2e.py  test_iso25010.py  test_large_repo.py  test_private_auth.py  test_workflow_loads.py
tests/fixtures/vulnerable-app/: .gitlab-ci.yml  app.py  requirements.txt  vuln.c
tests/fixtures/vulnerable-app/.circleci/: config.yml
tests/fixtures/vulnerable-app/.github/workflows/: ci.yml
workflows/: iso25010-scan.yaml  repo-scan.yaml
