[project]
name = "argus"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "click~=8.1",
    "anyio~=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "anyio[trio]>=4.0",
]

[project.scripts]
argus = "argus.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
anyio_mode = "auto"
